--- a/src/index.css
+++ b/src/index.css
@@ -9,4 +9,60 @@ html {
 body {
   margin: 0;
   min-height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  background-color: rgb(65, 159, 173);
+}
+
+a:link {
+  text-decoration: none;
+}
+
+li {
+  list-style: none;
+}
+
+.navigation {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: baseline;
+  background-color: transparent;
+  width: 100%;
+  height: 100%;
+  font-family: 'Raleway', sans-serif;
+}
+
+.name {
+  display: flex;
+  align-items: center;
+  padding: 0.5rem;
+  margin-left: 3rem;
+  margin-top: 1rem;
+  margin-bottom: 1rem;
+  font-size: 2.5rem;
+  font-weight: lighter;
+  color: white;
+}
+
+.sub-nav {
+  display: flex;
+  flex-direction: row;
+
+  padding: 1.25rem;
+}
+
+.nav-details {
+  color: white;
+  padding: 2rem;
+  font-size: 1.25rem;
+  font-weight: lighter;
+}
+
+.hero-pic {
+  display: flex;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
 }
