--- a/src/index.css
+++ b/src/index.css
@@ -33,7 +33,7 @@ li {
   position: fixed;
   background-color: transparent;
   width: 100%;
-  height: 100%;
+  height: 15%;
   font-family: 'Raleway', sans-serif;
 }
 
@@ -184,4 +184,8 @@ input {
   color: salmon;
   cursor: pointer;
   transition: all 0.4s ease;
+}
+
+.footer {
+  margin-bottom: 3rem;
 }
