--- a/src/index.css
+++ b/src/index.css
@@ -3,12 +3,13 @@
 }
 
 html {
-  height: 100%;
+  margin: 0;
+  min-height: 100%;
 }
 
 body {
+  position: relative;
   margin: 0;
-  min-height: 100%;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -16,6 +17,24 @@ body {
   font-family: 'Raleway', sans-serif;
 }
 
+.overlay {
+  position: absolute;
+  top: 18rem;
+  left: 59rem;
+  height: 26rem;
+  width: 21rem;
+  background-color: rgba(255, 255, 255, 0.5);
+  border-radius: 10px;
+  z-index: 10;
+}
+
+.player {
+  position: absolute;
+
+  top: 19.25rem;
+  left: 60.25rem;
+  z-index: 12;
+}
 a:link {
   text-decoration: none;
   -webkit-tap-highlight-color: transparent;
@@ -35,6 +54,7 @@ li {
   width: 100%;
   height: 15%;
   font-family: 'Raleway', sans-serif;
+  z-index: 13;
 }
 
 .name {
