--- a/src/index.css
+++ b/src/index.css
@@ -90,6 +90,8 @@ li {
   height: 100%;
   background-color: rgb(65, 159, 173);
 }
+
+.guitar-pic,
 .hero-pic {
   display: flex;
   background-position: center;
@@ -100,11 +102,11 @@ li {
 .video {
   display: flex;
   position: relative;
-
   height: 45rem;
   width: 100%;
 }
 img {
+  height: 55rem;
   width: 100%;
 }
 
@@ -115,7 +117,7 @@ img {
 .footer-text {
   display: flex;
   justify-content: center;
-  margin: 2rem;
+  margin: 1rem;
   color: white;
   font-size: 2.15rem;
 }
@@ -175,6 +177,23 @@ input {
   color: white;
 }
 
+.upcoming-shows {
+  color: white;
+  text-align: center;
+  font-size: 3rem;
+
+  margin-top: 10rem;
+  margin-bottom: 5rem;
+}
+
+.events {
+  min-height: 100%;
+  margin-top: 2rem;
+  margin-left: 2rem;
+  margin-right: 2rem;
+  margin-bottom: 2rem;
+  border: solid pink 2px;
+}
 .social-media {
   margin: 0 auto;
   display: flex;
@@ -206,6 +225,6 @@ input {
   transition: all 0.4s ease;
 }
 
-.footer {
+/* .footer {
   margin-bottom: 3rem;
-}
+} */
