--- a/src/index.css
+++ b/src/index.css
@@ -230,8 +230,8 @@ input {
 
   background-color: transparent;
 
-  margin-left: 22rem;
-  margin-right: 22rem;
+  margin-left: 2rem;
+  margin-right: 2rem;
   height: 30rem;
 }
 
@@ -245,24 +245,32 @@ input {
 }
 .labels {
   display: flex;
-  /* flex-direction: column; */
+  flex-direction: column;
   height: 0.25rem;
-  font-size: 1.25rem;
+  font-size: 1.5rem;
   padding: 2rem;
   align-items: flex-start;
   justify-content: space-between;
 }
 label {
   color: white;
+  padding-right: 5rem;
+  font-weight: bold;
 }
 input[type='date'].dateBox {
   font-size: 0.95rem;
   text-align: center;
+  width: 22.5rem;
+  height: 30srem;
+  border-radius: 3px;
 }
 
+.name-input {
+}
 .form-input {
   border: 1px solid white;
-  width: 20rem;
+  width: 30rem;
+  height: 30rem;
   border-radius: 3px;
   margin-bottom: 0.25rem;
   font-size: 1rem;
@@ -277,8 +285,20 @@ form {
 .form-button {
   display: flex;
   justify-content: center;
+  margin-left: 15rem;
+  margin-top: 3rem;
+  font-size: 1rem;
+  height: 36px;
+  width: 72px;
+  color: white;
+  background-color: salmon;
+  font-weight: 500;
+  border-radius: 4px;
 }
-
+.form-button:hover {
+  background-color: black;
+  color: white;
+}
 .form-overlay {
   position: absolute;
   top: 10rem;
