--- a/src/index.css
+++ b/src/index.css
@@ -232,6 +232,7 @@ input {
 
   margin-left: 2rem;
   margin-right: 2rem;
+  margin-top: 1rem;
   height: 30rem;
 }
 
@@ -246,9 +247,9 @@ input {
 .labels {
   display: flex;
   flex-direction: column;
-  height: 0.25rem;
+  /* height: 0.25rem; */
   font-size: 1.5rem;
-  padding: 2rem;
+  padding: 0.5rem;
   align-items: flex-start;
   justify-content: space-between;
 }
@@ -257,36 +258,47 @@ label {
   padding-right: 5rem;
   font-weight: bold;
 }
+
 input[type='date'].dateBox {
   font-size: 0.95rem;
   text-align: center;
-  width: 22.5rem;
-  height: 30srem;
+  width: 30rem;
+  height: 1.5rem;
   border-radius: 3px;
-}
-
-.name-input {
+  color: black;
+  background-color: whitesmoke;
 }
 .form-input {
   border: 1px solid white;
   width: 30rem;
-  height: 30rem;
+  height: 1.5rem;
   border-radius: 3px;
-  margin-bottom: 0.25rem;
   font-size: 1rem;
-  color: white;
+  color: black;
+  background-color: whitesmoke;
 }
+
+/* ask Jason how to move the cursor to the top of details box */
+.form-event-details-input {
+  border: 1px solid white;
+  width: 30rem;
+  height: 7.5rem;
+  border-radius: 3px;
+  font-size: 1rem;
+  color: black;
+  background-color: whitesmoke;
+}
+
 form {
   display: flex;
-
   justify-content: center;
 }
 
 .form-button {
   display: flex;
   justify-content: center;
-  margin-left: 15rem;
-  margin-top: 3rem;
+  margin-left: 14rem;
+  margin-top: 0.5rem;
   font-size: 1rem;
   height: 36px;
   width: 72px;
