changed css for iframe

--- a/src/index.css
+++ b/src/index.css
@@ -238,12 +238,12 @@ li {
   height: 45rem;
   width: 100%;
 }
-/* iframe {
+iframe {
   display: flex;
   position: relative;
   height: 45rem;
   width: 100%;
-} */
+}
 
 img {
   height: 55rem;
