--- a/src/index.css
+++ b/src/index.css
@@ -1167,9 +1167,9 @@ form {
     position: absolute;
 
     top: 7rem;
-    left: 9rem;
-    right: 10rem;
-    height: 33rem;
+    left: 3rem;
+    right: 8rem;
+    height: 26rem;
     width: 28rem;
     background-color: rgba(255, 255, 255, 0.25);
     border-radius: 10px;
@@ -1177,7 +1177,7 @@ form {
   }
 }
 
-@media (min-width: 320px) and (max-width: 480px) {
+@media (min-width: 401px) and (max-width: 480px) {
   .navigation {
     display: flex;
     flex-direction: column;
@@ -1220,7 +1220,7 @@ form {
     font-weight: lighter;
   }
   img {
-    height: 30rem;
+    height: 32rem;
     width: 100%;
   }
 
@@ -1345,7 +1345,7 @@ form {
   }
 
   .contact-form {
-    min-height: 25rem;
+    min-height: 30rem;
     display: flex;
     justify-content: center;
   }
@@ -1358,8 +1358,8 @@ form {
     background-color: transparent;
     margin-left: 2rem;
     margin-right: 2rem;
-    margin-top: 7.5rem;
-    height: 2rem;
+    margin-top: 0.5rem;
+    height: 20rem;
   }
 
   .booking-title {
@@ -1391,7 +1391,7 @@ form {
     font-size: 0.95rem;
     text-align: center;
     width: 16.5rem;
-    height: 1.25rem;
+    height: 1.5rem;
     border-radius: 3px;
     color: black;
     background-color: whitesmoke;
@@ -1426,7 +1426,284 @@ form {
     justify-content: center;
 
     margin-left: 0rem;
+    margin-top: 1rem;
+    font-size: 1rem;
+    height: 30px;
+    width: 66px;
+    color: white;
+    background-color: salmon;
+    font-weight: 500;
+    border-radius: 4px;
+  }
+  .form-button:hover {
+    background-color: black;
+    color: white;
+  }
+  .form-overlay {
+    position: absolute;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    top: 6rem;
+    left: 4rem;
+    right: 1rem;
+    height: 24rem;
+    width: 18.5rem;
+    background-color: rgba(255, 255, 255, 0.25);
+    border-radius: 10px;
+    z-index: 10;
+  }
+}
+@media (min-width: 320px) and (max-width: 399px) {
+  .navigation {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+
+    align-items: baseline;
+    position: fixed;
+    background-color: transparent;
+    width: 100%;
+    height: 15%;
+    font-family: 'Raleway', sans-serif;
+    z-index: 13;
+  }
+
+  .name {
+    display: flex;
+    align-items: left;
+    padding: 0.5rem;
+    margin-left: 0.25rem;
+    margin-top: 0.25rem;
+    margin-bottom: 0.25rem;
+    font-size: 2.5rem;
+    font-weight: bold;
+    color: white;
+  }
+
+  .sub-nav {
+    visibility: hidden;
+    display: flex;
+    flex-direction: row;
+    padding: 0;
+    margin: 0;
+  }
+
+  .nav-details {
+    color: white;
+    padding: 0;
+    margin: 0;
+    font-size: 1.25rem;
+    font-weight: lighter;
+  }
+  img {
+    height: 32rem;
+    width: 100%;
+  }
+
+  .video {
+    display: flex;
+    position: relative;
+    height: 25rem;
+    width: 100%;
+  }
+  .you-tube {
+    display: flex;
+    position: relative;
+    height: 25rem;
+    width: 100%;
+  }
+
+  .sidebarIconToggle {
+    visibility: visible;
+    transition: all 0.3s;
+    box-sizing: border-box;
+    cursor: pointer;
+    position: absolute;
+    z-index: 99;
+    height: 100%;
+    width: 100%;
+    margin-top: 3.5rem;
+    top: 22px;
+    left: 15px;
+    height: 28px;
+    width: 28px;
+  }
+
+  .overlay {
+    visibility: visible;
+    display: flex;
+    position: absolute;
+    top: 10rem;
+    left: 4.75rem;
+    height: 16rem;
+    width: 15rem;
+    background-color: rgba(255, 255, 255, 0.5);
+    border-radius: 10px;
+    z-index: 10;
+  }
+
+  .player {
+    position: absolute;
+    top: 11rem;
+    left: 5.25rem;
+    height: 14rem;
+    width: 14rem;
+    z-index: 12;
+  }
+
+  .footer {
+    margin-top: 5.5rem;
+    margin-bottom: 1rem;
+    z-index: 30;
+  }
+
+  .footer-text {
+    display: flex;
+    justify-content: center;
+    text-align: center;
+    margin: 1rem;
+    padding-left: 1rem;
+    padding-right: 1rem;
+    color: white;
+    font-size: 1.5rem;
+  }
+
+  .social-media {
+    margin: 0 auto;
+    display: flex;
+    justify-content: space-between;
+    max-width: 160px;
+  }
+
+  .shows {
+    display: flex;
+    flex-direction: column;
+    min-height: 40rem;
+  }
+
+  .music {
+    display: flex;
+    flex-direction: column;
+    min-height: 30rem;
+  }
+  .upcoming-shows {
+    color: white;
+    text-align: center;
+    font-size: 3rem;
+    margin-top: 8rem;
+    margin-bottom: 2rem;
+  }
+  .events-box {
+    min-height: 100%;
+    align-items: center;
+    text-align: center;
     margin-top: 0rem;
+    margin-left: 0rem;
+    margin-right: 0rem;
+    margin-bottom: 0rem;
+    font-size: 1.5rem;
+    color: black;
+    border: solid rgba(65, 159, 173, 0.7) 2px;
+  }
+
+  .event-info {
+    margin-left: 2.5rem;
+    margin-right: 5rem;
+    width: 80%;
+    background-color: rgba(255, 255, 255, 0.7);
+    position: absolute;
+    z-index: 10;
+  }
+
+  .event-detail {
+    padding-top: 3px;
+    padding-bottom: 6px;
+  }
+
+  .contact-form {
+    min-height: 30rem;
+    display: flex;
+    justify-content: center;
+  }
+
+  .booking-form {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    background-color: transparent;
+    margin-left: 2rem;
+    margin-right: 2rem;
+    margin-top: 0.5rem;
+    height: 20rem;
+  }
+
+  .booking-title {
+    display: flex;
+    justify-content: center;
+
+    color: white;
+    font-weight: bold;
+    font-size: 1.5rem;
+    z-index: 20;
+  }
+  .labels {
+    display: flex;
+    flex-direction: column;
+    color: white;
+    /* height: 0.25rem; */
+    font-size: 1rem;
+    padding: 0.5rem;
+    align-items: flex-start;
+    justify-content: space-between;
+  }
+  .form-label {
+    color: white;
+    padding-right: 1rem;
+    font-weight: bold;
+  }
+
+  input[type='date'].dateBox {
+    font-size: 0.95rem;
+    text-align: center;
+    width: 16.5rem;
+    height: 1.5rem;
+    border-radius: 3px;
+    color: black;
+    background-color: whitesmoke;
+  }
+  .form-input {
+    border: 1px solid white;
+    width: 16.5rem;
+    height: 1.25rem;
+    border-radius: 3px;
+    font-size: 1rem;
+    color: black;
+    background-color: whitesmoke;
+  }
+
+  .form-event-details-input {
+    border: 1px solid white;
+    width: 16.5rem;
+    height: 3.5rem;
+    border-radius: 3px;
+    font-size: 1rem;
+    color: black;
+    background-color: whitesmoke;
+  }
+
+  form {
+    display: flex;
+    justify-content: center;
+  }
+
+  .form-button {
+    display: flex;
+    justify-content: center;
+
+    margin-left: 0rem;
+    margin-top: 1rem;
     font-size: 1rem;
     height: 30px;
     width: 66px;
