--- a/src/index.css
+++ b/src/index.css
@@ -649,7 +649,7 @@ form {
   .form-overlay {
     position: absolute;
     top: 5rem;
-    left: 15rem;
+    left: 25rem !important;
     height: 38rem;
     width: 38rem;
     background-color: rgba(255, 255, 255, 0.25);
@@ -819,59 +819,7 @@ form {
   }
 }
 
-@media (min-width: 768px) and (max-width: 1024px) and (orientation: landscape) {
-  .footer {
-    margin-top: 2rem;
-    margin-bottom: 1.75rem;
-  }
-  .footer-text {
-    display: flex;
-    justify-content: center;
-    flex-direction: row;
-    text-align: center;
-    margin-top: 0rem;
-    margin-left: 12rem;
-    margin-right: 10rem;
-    color: white;
-    font-size: 2.15rem;
-  }
-
-  .gig-pic,
-  .guitar-pic,
-  .hero-pic {
-    display: flex;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-  }
-
-  img {
-    height: 40rem;
-    width: 100%;
-  }
-
-  .overlay {
-    visibility: visible;
-    display: flex;
-    position: absolute;
-    top: 16.5rem;
-    left: 40rem;
-    height: 21rem;
-    width: 21rem;
-    background-color: rgba(255, 255, 255, 0.5);
-    border-radius: 10px;
-    z-index: 10;
-  }
-
-  .player {
-    position: absolute;
-    top: 18rem;
-    height: 18rem;
-    left: 40.5rem;
-    width: 20rem;
-    z-index: 12;
-  }
-
+@media (min-height: 414px) and (min-width: 736px) and (orientation: landscape) {
   .contact-form {
     min-height: 25rem;
     display: flex;
@@ -883,11 +831,10 @@ form {
     flex-direction: column;
     justify-content: center;
     background-color: transparent;
-
     margin-left: 1rem;
     margin-right: 1rem;
-    margin-top: 1rem;
-    height: 24rem;
+    margin-top: 5rem;
+    height: 10rem;
   }
 
   .booking-title {
@@ -896,14 +843,14 @@ form {
 
     color: white;
     font-weight: bold;
-    font-size: 2rem;
+    font-size: 1.5rem;
   }
   .labels {
     display: flex;
     flex-direction: column;
     color: white;
     /* height: 0.25rem; */
-    font-size: 1.5rem;
+    font-size: 1rem;
     padding: 0.5rem;
     align-items: flex-start;
     justify-content: space-between;
@@ -917,7 +864,7 @@ form {
   input[type='date'].dateBox {
     font-size: 0.95rem;
     text-align: center;
-    width: 30rem;
+    width: 24rem;
     height: 1.5rem;
     border-radius: 3px;
     color: black;
@@ -925,7 +872,7 @@ form {
   }
   .form-input {
     border: 1px solid white;
-    width: 30rem;
+    width: 24rem;
     height: 1.5rem;
     border-radius: 3px;
     font-size: 1rem;
@@ -935,7 +882,7 @@ form {
 
   .form-event-details-input {
     border: 1px solid white;
-    width: 30rem;
+    width: 24rem;
     height: 5.5rem;
     border-radius: 3px;
     font-size: 1rem;
@@ -962,12 +909,112 @@ form {
   }
   .form-overlay {
     position: absolute;
-
-    top: 5rem;
+    top: 7rem;
     left: 10rem;
-    right: 10rem;
-    height: 33rem;
-    width: 38rem;
+    right: 8rem;
+    height: 26rem;
+    width: 28rem;
+    background-color: rgba(255, 255, 255, 0.25);
+    border-radius: 10px;
+    z-index: 10;
+  }
+}
+
+@media (min-height: 375px) and (min-width: 812px) and (orientation: landscape) {
+  .contact-form {
+    min-height: 25rem;
+    display: flex;
+    justify-content: center;
+  }
+
+  .booking-form {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    background-color: transparent;
+    margin-left: 1rem;
+    margin-right: 1rem;
+    margin-top: 5rem;
+    height: 10rem;
+  }
+
+  .booking-title {
+    display: flex;
+    justify-content: center;
+
+    color: white;
+    font-weight: bold;
+    font-size: 1.5rem;
+  }
+  .labels {
+    display: flex;
+    flex-direction: column;
+    color: white;
+    /* height: 0.25rem; */
+    font-size: 1rem;
+    padding: 0.5rem;
+    align-items: flex-start;
+    justify-content: space-between;
+  }
+  .form-label {
+    color: white;
+    padding-right: 5rem;
+    font-weight: bold;
+  }
+
+  input[type='date'].dateBox {
+    font-size: 0.95rem;
+    text-align: center;
+    width: 24rem;
+    height: 1.5rem;
+    border-radius: 3px;
+    color: black;
+    background-color: whitesmoke;
+  }
+  .form-input {
+    border: 1px solid white;
+    width: 24rem;
+    height: 1.5rem;
+    border-radius: 3px;
+    font-size: 1rem;
+    color: black;
+    background-color: whitesmoke;
+  }
+
+  .form-event-details-input {
+    border: 1px solid white;
+    width: 24rem;
+    height: 5.5rem;
+    border-radius: 3px;
+    font-size: 1rem;
+    color: black;
+    background-color: whitesmoke;
+  }
+
+  .form-button {
+    display: flex;
+    justify-content: center;
+    margin-left: 10rem;
+    margin-top: 0.5rem;
+    font-size: 1rem;
+    height: 36px;
+    width: 72px;
+    color: white;
+    background-color: salmon;
+    font-weight: 500;
+    border-radius: 4px;
+  }
+  .form-button:hover {
+    background-color: black;
+    color: white;
+  }
+  .form-overlay {
+    position: absolute;
+    top: 7rem;
+    left: 12rem;
+    right: 7rem;
+    height: 26rem;
+    width: 28rem;
     background-color: rgba(255, 255, 255, 0.25);
     border-radius: 10px;
     z-index: 10;
@@ -1030,7 +1077,7 @@ form {
     z-index: 99;
     height: 100%;
     width: 100%;
-    margin-top: 6rem;
+    margin-top: 5rem;
     top: 22px;
     left: 15px;
     height: 28px;
@@ -1149,7 +1196,7 @@ form {
   .form-button {
     display: flex;
     justify-content: center;
-    margin-left: 14rem;
+    margin-left: 10rem;
     margin-top: 0.5rem;
     font-size: 1rem;
     height: 36px;
@@ -1167,9 +1214,9 @@ form {
     position: absolute;
 
     top: 7rem;
-    left: 3rem;
+    left: 9rem;
     right: 8rem;
-    height: 26rem;
+    height: 27.5rem;
     width: 28rem;
     background-color: rgba(255, 255, 255, 0.25);
     border-radius: 10px;
@@ -1220,7 +1267,7 @@ form {
     font-weight: lighter;
   }
   img {
-    height: 32rem;
+    height: 30rem;
     width: 100%;
   }
 
@@ -1259,7 +1306,7 @@ form {
     position: absolute;
     top: 10rem;
     left: 4.75rem;
-    height: 16rem;
+    height: 18rem;
     width: 15rem;
     background-color: rgba(255, 255, 255, 0.5);
     border-radius: 10px;
@@ -1270,7 +1317,7 @@ form {
     position: absolute;
     top: 11rem;
     left: 5.25rem;
-    height: 14rem;
+    height: 16rem;
     width: 14rem;
     z-index: 12;
   }
@@ -1497,7 +1544,7 @@ form {
     font-weight: lighter;
   }
   img {
-    height: 32rem;
+    height: 30rem;
     width: 100%;
   }
 
@@ -1536,7 +1583,7 @@ form {
     position: absolute;
     top: 10rem;
     left: 4.75rem;
-    height: 16rem;
+    height: 18rem;
     width: 15rem;
     background-color: rgba(255, 255, 255, 0.5);
     border-radius: 10px;
@@ -1547,7 +1594,7 @@ form {
     position: absolute;
     top: 11rem;
     left: 5.25rem;
-    height: 14rem;
+    height: 16rem;
     width: 14rem;
     z-index: 12;
   }
@@ -1724,7 +1771,7 @@ form {
     top: 6rem;
     left: 2.5rem;
     right: 1rem;
-    height: 24rem;
+    height: 28rem;
     width: 18.5rem;
     background-color: rgba(255, 255, 255, 0.25);
     border-radius: 10px;
